Review Request 8539: Unify precision of Python and RTS scoring (DP-3811)